apply plugin: 'com.android.application'
apply plugin: 'com.jakewharton.butterknife'
apply plugin: 'kotlin-android'
apply plugin: 'kotlin-android-extensions'

android {

    tasks.withType(JavaCompile).configureEach {
        options.fork = true
        options.forkOptions.jvmArgs += [
                '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
        ]
    }

    compileSdkVersion 34
    buildToolsVersion '30.0.3'
    namespace 'com.app.fastprint'


    /*signingConfigs {
        release {
            storeFile file("../KeyStorePath/appypie")
            storePassword "appypie123"
            keyAlias "appypie"
            keyPassword "appypie123"
        }
    }*/
    defaultConfig {
        applicationId "com.app.fastprint"
        minSdk 21
        targetSdkVersion 34
        versionCode 22
        versionName "2.3.7"
        // Enabling multidex support.
        multiDexEnabled true
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            //signingConfigs signingConfigs.release
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    lintOptions {
        checkReleaseBuilds false
    }
    packagingOptions {
        exclude 'META-INF/DEPENDENCIES'
        exclude 'META-INF/LICENSE'
        exclude 'META-INF/LICENSE.txt'
        exclude 'META-INF/license.txt'
        exclude 'META-INF/NOTICE'
        exclude 'META-INF/NOTICE.txt'
        exclude 'META-INF/notice.txt'
        exclude 'META-INF/ASL2.0'
    }
}

dependencies {
    implementation fileTree(include: ["*.aar"], dir: "libs")
    //implementation project(":oppwa.mobile")

//// Google Drive
//    implementation "com.google.android.gms:play-services-auth:$play_services_version"
//    implementation "com.google.android.gms:play-services-drive:$play_services_version"
//    implementation 'com.squareup.okio:okio:1.14.0'

    implementation 'com.google.http-client:google-http-client-gson:1.26.0'
    implementation('com.google.api-client:google-api-client-android:1.26.0')
    implementation('com.google.apis:google-api-services-drive:v3-rev197-1.25.0')

    implementation 'androidx.appcompat:appcompat:1.2.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'com.google.android.gms:play-services-maps:17.0.0'
    implementation 'com.google.android.gms:play-services-location:18.0.0'
    implementation 'com.google.firebase:firebase-auth:20.0.3'
    implementation 'com.google.android.gms:play-services-auth:19.0.0'

    implementation "com.google.firebase:firebase-core:18.0.2"
    implementation 'com.google.firebase:firebase-messaging:21.0.1'
    implementation 'com.google.android.gms:play-services-drive:17.0.0'
    implementation 'com.google.android.gms:play-services-wallet:19.1.0'

    implementation 'com.jakewharton:butterknife:10.2.3'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'

    implementation 'com.intuit.ssp:ssp-android:1.1.0'
    implementation 'com.intuit.sdp:sdp-android:1.1.0'
    implementation "androidx.cardview:cardview:1.0.0"
    implementation 'io.github.inflationx:calligraphy3:3.1.1'
    implementation 'io.github.inflationx:viewpump:2.0.3'
    implementation 'de.hdodenhof:circleimageview:3.1.0'
    implementation 'androidx.recyclerview:recyclerview:1.1.0'
    implementation 'com.google.android.material:material:1.3.0'
    implementation 'com.makeramen:roundedimageview:2.3.0'
    implementation 'fr.avianey.com.viewpagerindicator:library:2.4.1.1@aar'
    implementation "io.github.maitrungduc1410:AVLoadingIndicatorView:2.1.4"
    implementation 'com.github.bumptech.glide:glide:4.11.0'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
    // retrofit library
    implementation('com.squareup.retrofit2:retrofit:2.7.0') {
        // exclude Retrofit’s OkHttp dependency module and define your own module import
        exclude module: 'okhttp'
    }
    implementation 'com.google.code.gson:gson:2.8.6'
    implementation 'com.squareup.retrofit2:converter-gson:2.7.0'
    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'
    implementation 'com.squareup.okhttp3:okhttp:4.2.2'
    implementation 'com.codesgood:justifiedtextview:1.1.0'
    implementation 'com.github.jrvansuita:PickImage:2.2.4'
    implementation 'com.android.support:multidex:1.0.3'
    implementation 'com.facebook.android:facebook-login:15.2.0'
    implementation 'com.facebook.android:facebook-android-sdk:15.2.0'
    implementation 'com.github.varunest:sparkbutton:1.0.6'
    implementation 'com.google.android.gms:play-services-basement:17.6.0'
    implementation 'com.dropbox.core:dropbox-core-sdk:5.0.0'

    implementation 'com.squareup.picasso:picasso:2.71828'
    implementation 'com.github.gcacace:signature-pad:1.3.1'

    implementation 'androidx.browser:browser:1.5.0'
    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.2.0'

    implementation  'androidx.browser:browser:1.3.0'
    implementation 'androidx.fragment:fragment:1.3.0'
    implementation 'androidx.webkit:webkit:1.3.0'

    implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.7.0"
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.3"
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
    implementation 'com.github.grapesnberries:curlloggerinterceptor:0.1'

}
apply plugin: 'com.google.gms.google-services'